glbc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
  labels:
    k8s-app: $SERVICE_NAME
spec:
  type: NodePort
  ports:
  - port: $SERVICE_PORT
    targetPort: $SERVICE_PORT
    protocol: TCP
    name: http
  selector:
    k8s-app: $SERVICE_NAME
